--- a/reper_front/app/src/main/res/layout/dialog_ingredient_filter.xml
+++ b/reper_front/app/src/main/res/layout/dialog_ingredient_filter.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="380dp"
     android:layout_height="600dp"
     android:background="@drawable/dialog_delete"
@@ -41,38 +40,34 @@
             android:textColor="@color/darkgreen"
             android:textSize="22sp" />
 
-
-
-
         <RadioButton
+            android:id="@+id/radio_coffee"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="커피"
-            android:textSize="20dp"
-          />
+            android:textSize="20dp" />
 
         <RadioButton
+            android:id="@+id/radio_matcha"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="말차"
             android:textSize="20dp" />
 
         <RadioButton
+            android:id="@+id/radio_chocolate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="초콜릿"
             android:textSize="20dp" />
 
         <RadioButton
+            android:id="@+id/radio_earl_grey"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="얼그레이"
             android:textSize="20dp" />
-
-
     </LinearLayout>
-
-
 
     <LinearLayout
         android:id="@+id/linearLayout3"
@@ -91,29 +86,27 @@
             android:textColor="@color/darkgreen"
             android:textSize="22sp" />
 
-
         <RadioButton
+            android:id="@+id/radio_milk"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="우유"
-            android:textSize="20dp"
-            />
+            android:textSize="20dp" />
 
         <RadioButton
+            android:id="@+id/radio_cream"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="크림"
             android:textSize="20dp" />
 
         <RadioButton
+            android:id="@+id/radio_condensed_milk"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="연유"
             android:textSize="20dp" />
-
-
     </LinearLayout>
-
 
     <LinearLayout
         android:id="@+id/linearLayout4"
@@ -124,7 +117,6 @@
         app:layout_constraintStart_toEndOf="@+id/linearLayout2"
         app:layout_constraintTop_toTopOf="@+id/linearLayout2">
 
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -134,49 +126,43 @@
             android:textSize="22sp" />
 
         <RadioButton
+            android:id="@+id/radio_banana"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="바나나"
             android:textSize="20dp" />
 
         <RadioButton
+            android:id="@+id/radio_strawberry"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="딸기"
             android:textSize="20dp" />
 
         <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="청포도"
-            android:textSize="20dp" />
-
-
-        <RadioButton
+            android:id="@+id/radio_blueberry"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="블루베리"
             android:textSize="20dp" />
 
-
         <RadioButton
+            android:id="@+id/radio_lemon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="레몬"
             android:textSize="20dp" />
 
-
         <RadioButton
+            android:id="@+id/radio_grapefruit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="자몽"
             android:textSize="20dp" />
-
     </LinearLayout>
 
-
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/dialog_delete_cancle_btn"
+        android:id="@+id/dialog_delete_cancel_btn"
         android:layout_width="100dp"
         android:layout_height="48dp"
         android:background="@drawable/line_btn"
@@ -197,8 +183,4 @@
         android:textColor="@color/bgwhite"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
-
-
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
