--- a/reper_front/app/src/main/res/layout/fragment_full_recipe.xml
+++ b/reper_front/app/src/main/res/layout/fragment_full_recipe.xml
@@ -101,33 +101,60 @@
             android:layout_marginTop="24dp"
             app:singleSelection="true"
             app:checkedButton="@+id/fullrecipe_fm_btn_ice"
+            android:backgroundTint="@color/darkgreen"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/fullrecipe_fm_btn_ice"
-                style="?attr/materialButtonOutlinedStyle"
+                android:id="@+id/CheckedToggleButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                style="@style/CheckedToggleButtonStyle"
                 android:fontFamily="@font/pretendard_semibold"
                 android:text="Ice"
-                android:textColor="@color/black"
                 android:textSize="20sp"
-                android:background="@drawable/button_selector_fullrecipe"
+                android:textAllCaps="false"
                 android:visibility="visible" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/fullrecipe_fm_btn_hot"
-                style="?attr/materialButtonOutlinedStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                style="@style/BaseToggleButtonStyle"
                 android:text="Hot"
-                android:textColor="@color/black"
                 android:textSize="20sp"
-                android:background="@drawable/button_selector_fullrecipe"
+                android:fontFamily="@font/pretendard_semibold"
+                android:textAllCaps="false"
                 android:visibility="visible" />
 
         </com.google.android.material.button.MaterialButtonToggleGroup>
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/pretendard_bold"
+            android:text="Ingredients"
+            android:textColor="@color/darkgreen"
+            android:textSize="32sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/toggle_button_group" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="재료"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView5" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
