--- a/reper_front/app/src/main/res/values/style.xml
+++ b/reper_front/app/src/main/res/values/style.xml
@@ -5,4 +5,27 @@
         <item name="android:textSize">24sp</item>
         <item name="android:textColor">#101A24</item>
     </style>
+
+    <!-- 기본 MaterialButton 스타일 -->
+    <style name="BaseToggleButtonStyle" parent="Widget.MaterialComponents.Button.OutlinedButton">
+        <!-- 버튼 배경 색상 -->
+        <item name="backgroundTint">@android:color/transparent</item>
+        <!-- 텍스트 색상 -->
+        <item name="android:textColor">@color/black</item>
+        <!-- 모서리 둥글게 -->
+        <item name="cornerRadius">16dp</item>
+        <!-- 테두리 색상 -->
+        <item name="strokeColor">@color/green</item>
+        <!-- 테두리 두께 -->
+        <item name="strokeWidth">2dp</item>
+    </style>
+
+    <!-- 선택된 버튼 스타일 -->
+    <style name="CheckedToggleButtonStyle" parent="Widget.MaterialComponents.Button.OutlinedButton">
+        <item name="backgroundTint">@color/green</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="cornerRadius">16dp</item>
+        <item name="strokeColor">@color/green</item>
+        <item name="strokeWidth">2dp</item>
+    </style>
 </resources>
