--- a/reper_front/app/src/main/res/values/themes.xml
+++ b/reper_front/app/src/main/res/values/themes.xml
@@ -1,9 +1,13 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.Reper" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/lightgreen</item>
+        <item name="colorSecondary">@color/green</item>
     </style>
 
     <style name="Theme.Reper" parent="Base.Theme.Reper" />
+
+    <style name="Theme.MyApp" parent="Theme.MaterialComponents.DayNight">
+        <item name="materialButtonStyle">@style/BaseToggleButtonStyle</item>
+    </style>
 </resources>
