--- a/reper_front/app/src/main/res/layout/item_recipe.xml
+++ b/reper_front/app/src/main/res/layout/item_recipe.xml
@@ -11,7 +11,6 @@
         android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/darkgray"
         android:elevation="8dp"
         android:translationZ="5dp"
         app:cardCornerRadius="8dp"
@@ -27,11 +26,9 @@
             android:paddingEnd="16dp"
             android:paddingBottom="8dp">
 
-            <!-- 레시피 이미지 -->
 
-            <!-- 날짜 텍스트 -->
             <androidx.cardview.widget.CardView
-                android:id="@+id/recipe_img"
+                android:id="@+id/recipe_img_CV"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 app:cardBackgroundColor="@color/lightgray"
@@ -40,19 +37,26 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.571" />
+                app:layout_constraintVertical_bias="0.571" >
+
+                <ImageView
+                    android:id="@+id/recipe_img_IV"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    />
+            </androidx.cardview.widget.CardView>
 
             <TextView
                 android:id="@+id/recpe_add_date_TV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="16dp"
                 android:text="2025.01.24"
                 android:textColor="@color/darkgray"
                 android:layout_marginTop="16dp"
                 android:textSize="16dp"
                 app:layout_constraintBottom_toTopOf="@+id/recipe_item_name"
-                app:layout_constraintStart_toEndOf="@+id/recipe_img"
+                app:layout_constraintStart_toEndOf="@+id/recipe_img_CV"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <!-- 이름 텍스트 -->
@@ -60,14 +64,14 @@
                 android:id="@+id/recipe_item_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="16dp"
                 android:elevation="8dp"
                 android:layout_marginLeft="16dp"
                 android:text="레시피 이름입니다"
                 android:textColor="@color/fontblack"
                 android:textSize="18sp"
                 android:layout_marginTop="8dp"
-                app:layout_constraintStart_toEndOf="@+id/recipe_img"
+                app:layout_constraintStart_toEndOf="@+id/recipe_img_CV"
                 app:layout_constraintTop_toBottomOf="@+id/recpe_add_date_TV" />
 
             <!-- 삭제 아이콘 -->
