--- a/reper_front/app/src/main/res/layout/activity_main.xml
+++ b/reper_front/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,42 @@
     android:layout_height="match_parent"
     tools:context=".ui.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <FrameLayout
+        android:id="@+id/fram_fragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
+
+    <Button
+        android:id="@+id/bossbtn"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:text="보스프래그먼트 가기"
         app:layout_constraintTop_toTopOf="parent" />
+
+
+    <Button
+        android:id="@+id/recipebtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="레시피관리 보러 가기"
+        app:layout_constraintTop_toBottomOf="@+id/bossbtn" />
+
+
+    <Button
+        android:id="@+id/notibtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="공지관리 보러 가기"
+        app:layout_constraintTop_toBottomOf="@+id/recipebtn" />
+
+
+
+    <Button
+        android:id="@+id/notiwritebtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="공지쓰기 보러 가기"
+        app:layout_constraintTop_toBottomOf="@+id/notibtn" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
