--- a/reper_front/app/src/main/res/layout/item_recipe.xml
+++ b/reper_front/app/src/main/res/layout/item_recipe.xml
@@ -11,6 +11,7 @@
         android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="100dp"
+        android:layout_marginEnd="12dp"
         android:elevation="5dp"
         android:translationZ="1dp"
         app:cardCornerRadius="8dp"
@@ -30,19 +31,18 @@
                 android:id="@+id/recipe_img_CV"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
-                app:cardBackgroundColor="@color/lightgray"
                 android:elevation="8dp"
+                app:cardBackgroundColor="@color/lightgray"
                 app:cardCornerRadius="8dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.571" >
+                app:layout_constraintVertical_bias="0.571">
 
                 <ImageView
                     android:id="@+id/recipe_img_IV"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    />
+                    android:layout_height="wrap_content" />
             </androidx.cardview.widget.CardView>
 
             <TextView
@@ -50,9 +50,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
                 android:text="2025.01.24"
                 android:textColor="@color/darkgray"
-                android:layout_marginTop="16dp"
                 android:textSize="16dp"
                 app:layout_constraintBottom_toTopOf="@+id/recipe_item_name"
                 app:layout_constraintStart_toEndOf="@+id/recipe_img_CV"
@@ -64,12 +64,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:elevation="8dp"
                 android:layout_marginLeft="16dp"
+                android:layout_marginTop="8dp"
+                android:elevation="8dp"
                 android:text="레시피 이름입니다"
                 android:textColor="@color/fontblack"
                 android:textSize="18sp"
-                android:layout_marginTop="8dp"
                 app:layout_constraintStart_toEndOf="@+id/recipe_img_CV"
                 app:layout_constraintTop_toBottomOf="@+id/recpe_add_date_TV" />
 
@@ -79,11 +79,11 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:src="@drawable/cancel_24px"
+                android:tint="@color/lightgray"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:ignore="UseAppTint"
-                android:tint="@color/lightgray" />
+                tools:ignore="UseAppTint" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
