--- a/reper_front/app/src/main/res/layout/fragment_all_recipe.xml
+++ b/reper_front/app/src/main/res/layout/fragment_all_recipe.xml
@@ -28,6 +28,7 @@
             android:id="@+id/constraintLayout"
             android:layout_width="match_parent"
             android:layout_height="44dp"
+            android:layout_marginStart="-5dp"
             android:layout_marginTop="24dp"
             android:background="@drawable/search_bar"
             app:layout_constraintEnd_toEndOf="parent"
@@ -47,14 +48,16 @@
 
             <EditText
                 android:id="@+id/allrecipe_fm_et_search"
-                android:layout_width="255dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@android:color/transparent"
                 android:fontFamily="@font/pretendard_regular"
                 android:hint="레시피를 검색해보세요."
                 android:textColor="@color/black"
                 android:textSize="16sp"
+                android:singleLine="true"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/allrecipe_fm_btn_filter"
                 app:layout_constraintStart_toEndOf="@+id/allrecipe_fm_btn_search"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -72,13 +75,13 @@
 
         <Spinner
             android:id="@+id/allrecipe_fm_sp"
-            android:layout_width="150dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
             android:paddingHorizontal="16dp"
             android:paddingVertical="8dp"
-            android:spinnerMode="dialog"
+            android:spinnerMode="dropdown"
             android:background="@drawable/spinner_allrecipe_category"
             android:theme="@style/SpinnerTheme"
             app:layout_constraintEnd_toEndOf="parent"
@@ -94,29 +97,33 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/allrecipe_fm_sp"
+            android:gravity="center"
             app:singleSelection="true">
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/allrecipe_fm_btn_step"
                 style="@style/AllRecipeCheckedToggleButtonStyle"
-                android:layout_width="200dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/pretendard_bold"
                 android:paddingHorizontal="16dp"
                 android:text="단계별 레시피"
                 android:textAllCaps="false"
-                android:textSize="20sp"
+                android:textAlignment="center"
+                android:textSize="16sp"
+                android:layout_weight="0.5"
                 android:visibility="visible" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/allrecipe_fm_btn_full"
                 style="@style/AllRecipeBaseToggleButtonStyle"
-                android:layout_width="200dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/pretendard_bold"
                 android:text="전체 레시피"
                 android:textAllCaps="false"
-                android:textSize="20sp"
+                android:textSize="16sp"
+                android:layout_weight="0.5"
                 android:visibility="visible" />
 
         </com.google.android.material.button.MaterialButtonToggleGroup>
@@ -135,19 +142,10 @@
             android:id="@+id/allrecipe_fm_fl_btn_search_bottom"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/btn"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
-
-            <ImageButton
-                android:id="@+id/allrecipe_fm_btn_search_bottom"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@android:color/transparent"
-                android:src="@drawable/btn"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
 
             <TextView
                 android:layout_width="wrap_content"
