--- a/reper_front/app/src/main/res/values/style.xml
+++ b/reper_front/app/src/main/res/values/style.xml
@@ -17,7 +17,7 @@
         <!-- 버튼 배경 색상 -->
         <item name="backgroundTint">@android:color/transparent</item>
         <!-- 텍스트 색상 -->
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">@color/green</item>
         <!-- 모서리 둥글게 -->
         <item name="cornerRadius">16dp</item>
         <!-- 테두리 색상 -->
