--- a/reper_front/app/src/main/res/layout/dialog_delete.xml
+++ b/reper_front/app/src/main/res/layout/dialog_delete.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="330dp"
-    android:layout_height="220dp"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:background="@drawable/dialog_delete"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -11,6 +11,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="55dp"
         android:layout_gravity="center"
+        android:singleLine="true"
+        android:orientation="horizontal"
         android:layout_marginHorizontal="32dp"
         >
     <TextView
@@ -18,7 +20,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="굵은글씨"
+        android:maxWidth="180dp"
         android:textSize="20sp"
+        android:ellipsize="end"
+        android:singleLine="true"
         android:fontFamily="@font/pretendard_semibold"/>
     <TextView
         android:id="@+id/dialog_delete_rle_tv"
@@ -26,6 +31,7 @@
         android:layout_height="wrap_content"
         android:text="를 "
         android:textSize="20sp"
+        android:singleLine="true"
        />
 
     </LinearLayout>
