--- a/reper_front/app/src/main/res/layout/dialog_store_add.xml
+++ b/reper_front/app/src/main/res/layout/dialog_store_add.xml
@@ -23,13 +23,16 @@
         android:inputType="text"
        />
 
-    <ImageView
+    <TextView
         android:id="@+id/add_btn"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:textSize="16sp"
+        android:textColor="@color/darkgreen"
+        android:fontFamily="@font/pretendard_regular"
         android:layout_gravity="center_vertical"
-        android:src="@drawable/baseline_add_24" />
+        android:text="추가" />
 
 </LinearLayout>
 
