--- a/reper_front/app/src/main/res/layout/fragment_order.xml
+++ b/reper_front/app/src/main/res/layout/fragment_order.xml
@@ -28,7 +28,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
     <Spinner
         android:id="@+id/fragment_order_date_spinner"
         android:layout_width="150dp"
@@ -43,20 +42,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
-    <FrameLayout
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/fragment_order_rv_order"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fragment_order_date_spinner">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fragment_order_date_spinner" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/fragment_order_rv_order"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="24dp"
-            android:layout_marginTop="20dp" />
-
-    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
