--- a/reper_front/app/src/main/res/layout/fragment_recipe_manage.xml
+++ b/reper_front/app/src/main/res/layout/fragment_recipe_manage.xml
@@ -70,6 +70,7 @@
 
 
             <EditText
+                android:id="@+id/recipeSearchBarET"
                 android:layout_width="270dp"
                 android:layout_height="match_parent"
                 android:background="@android:color/transparent"
