--- a/reper_front/app/src/main/res/layout/rv_order_recipe_item.xml
+++ b/reper_front/app/src/main/res/layout/rv_order_recipe_item.xml
@@ -10,114 +10,99 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="120dp">
+        android:layout_height="100dp">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <ImageView
+            android:id="@+id/rv_order_recipe_img"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginStart="24dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/americano_hot"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <ImageView
-                android:id="@+id/rv_order_recipe_img"
-                android:src="@drawable/americano_hot"
-                android:scaleType="centerCrop"
-                android:layout_marginHorizontal="20dp"
-                android:layout_width="90dp"
-                android:layout_height="90dp"/>
+        <LinearLayout
+            android:id="@+id/linearLayout5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginStart="24dp"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="@+id/rv_order_recipe_img"
+            app:layout_constraintStart_toEndOf="@+id/rv_order_recipe_img"
+            app:layout_constraintTop_toTopOf="@+id/rv_order_recipe_img">
+
+            <TextView
+                android:id="@+id/rv_order_recipe_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/pretendard_semibold"
+                android:text="아메리카노 Ice"
+                android:textColor="@color/black"
+                android:textSize="16sp" />
 
             <LinearLayout
-                android:layout_gravity="center"
-                android:orientation="vertical"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="2dp">
 
                 <TextView
-                    android:id="@+id/rv_order_recipe_title"
-                    android:text="아메리카노 Ice"
-                    android:textSize="16sp"
-                    android:fontFamily="@font/pretendard_semibold"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/pretendard_regular"
+                    android:text="수량 : "
+                    android:textColor="@color/darkgray"
+                    android:textSize="14sp" />
 
-                <LinearLayout
-                    android:layout_marginTop="4dp"
+                <TextView
+                    android:id="@+id/rv_order_recipe_quantity"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
+                    android:layout_height="match_parent"
+                    android:fontFamily="@font/pretendard_regular"
+                    android:text="2"
+                    android:textColor="@color/darkgray"
+                    android:textSize="14sp" />
 
-                    <TextView
-                        android:text="수량 : "
-                        android:textColor="@color/darkgray"
-                        android:textSize="14sp"
-                        android:fontFamily="@font/pretendard_regular"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
+            </LinearLayout>
 
-                    <TextView
-                        android:id="@+id/rv_order_recipe_quantity"
-                        android:text="2"
-                        android:textColor="@color/darkgray"
-                        android:textSize="14sp"
-                        android:fontFamily="@font/pretendard_regular"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="2dp">
 
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_marginTop="4dp"
+                <TextView
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/pretendard_regular"
+                    android:text="요청사항 : "
+                    android:textColor="@color/darkgray"
+                    android:textSize="14sp" />
 
-                    <TextView
-                        android:text="요청사항 : "
-                        android:textColor="@color/black"
-                        android:textSize="14sp"
-                        android:fontFamily="@font/pretendard_regular"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
-
-                    <TextView
-                        android:id="@+id/rv_order_recipe_message"
-                        android:text="샷 추가"
-                        android:textColor="@color/black"
-                        android:textSize="14sp"
-                        android:fontFamily="@font/pretendard_regular"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
-
-                </LinearLayout>
+                <TextView
+                    android:id="@+id/rv_order_recipe_message"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/pretendard_regular"
+                    android:text="샷 추가"
+                    android:textColor="@color/darkgray"
+                    android:textSize="14sp" />
 
             </LinearLayout>
 
         </LinearLayout>
 
-
-        <TextView
-            android:id="@+id/textView15"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16sp"
-            android:layout_marginRight="20sp"
-            android:fontFamily="@font/pretendard_regular"
-            android:text="1분전"
-            android:textColor="@color/lightgray"
-            android:textSize="12sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
         <androidx.appcompat.widget.AppCompatCheckBox
             android:id="@+id/rv_order_recipe_checkbox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            app:buttonTint="@color/checkbox_tint_selector"
+            android:buttonTint="@color/checkbox_tint_selector"
             android:clickable="true"
             android:focusable="true"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
-
+            app:layout_constraintBottom_toBottomOf="@+id/linearLayout5"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/linearLayout5" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
